--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Current number of Covid-19 infections</h1>
     <label for="statistic">Choose a statistic:</label>
-    <select id="statistic" onchange="updateChart(this.selectedIndex);">
+    <select id="statistic" onchange="updateChart(this.selectedIndex, init=false);">
         <option value="1"># of cases</option>
         <option value="2"># of deaths</option>
         <option value="3"># of recovered</option>
