Change dependency management
In order to save depencies, the management gets changed.
* Dependencies are saved with Frontend-Dependency package
* Only needed js files are copied in a static folder on npm i
* Upload to S3 bucket ignores rest of node_modules
* Added jquery for new functions
* Add gitignore for static/ folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
       <title>Covid-19 infection status</title>
       <meta charset="utf-8"/>
-      <script type="text/javascript" src="node_modules/chart.js/dist/Chart.min.js"></script>
+      <script type="text/javascript" src="static/Chart.bundle.min.js"></script>
+      <script type="text/javascript" src="static/jquery.min.js"></script>
       <link rel="stylesheet" href="style.css" />
     </head>
 <body>
